desktop/renderer/style.css
/* Reset */
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* End reset */

/* Roboto */
@font-face {
    font-family: 'Roboto';
    font-weight: 300;
    src: url(fonts/RobotoLight.ttf);
    src: local('Roboto Light'), local('Roboto-Light'), format('truetype');
}
@font-face {
    font-family: 'Roboto';
    font-weight: 400;
    src: url(fonts/Roboto.ttf);
    src: local('Roboto'), local('Roboto-Regular'), format('truetype');
}
@font-face {
    font-family: 'Roboto';
    font-weight: 500;
    src: url(fonts/RobotoMedium.ttf);
    src: local('Roboto Medium'), local('Roboto-Medium'), format('truetype');
}

/* Source Code Pro */
@font-face {
    font-family: 'Source Code Pro';
    font-weight: 400;
    src: url(fonts/SourceCodePro/SourceCodePro-Regular.ttf);
    src: local('Source Code Pro'), local('SourceCodePro-Regular'), format('truetype');
}

@font-face {
    font-family: 'Source Code Pro';
    font-weight: 600;
    src: url(fonts/SourceCodePro/SourceCodePro-Semibold.ttf);
    src: local('Source Code Pro'), local('SourceCodePro-Semibold'), format('truetype');
}

/* Lato */
@font-face {
    font-family: 'Lato';
    font-weight: 400;
    src: url(fonts/lato/Lato-Regular.ttf);
    src: local('Lato'), local('Lato-Regular'), format('truetype');
}

@font-face {
    font-family: 'Lato';
    font-weight: 400;
    font-style: italic;
    src: url(fonts/lato/Lato-Italic.ttf);
    src: local('Lato'), local('Lato-Italic'), format('truetype');
}

@font-face {
    font-family: 'Lato';
    font-weight: 600;
    src: url(fonts/lato/Lato-Semibold.ttf);
    src: local('Lato'), local('Lato-Semibold'), format('truetype');
}

@font-face {
    font-family: 'Lato';
    font-weight: 600;
    font-style: italic;
    src: url(fonts/lato/Lato-SemiboldItalic.ttf);
    src: local('Lato'), local('Lato-SemiboldItalic'), format('truetype');
}

@font-face {
    font-family: 'Lato';
    font-weight: 700;
    src: url(fonts/lato/Lato-Bold.ttf);
    src: local('Lato'), local('Lato-Bold'), format('truetype');
}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
    font-family: 'Roboto';
    overflow: hidden;
}

#app {
    position: absolute;
    display: flex;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0
}

.hover-underline {
  text-decoration: none;
}
.hover-underline:hover {
  text-decoration: underline;
}

.hide-scrollbar::-webkit-scrollbar {
	display: none;
	width: 0;
}

